--- a/src/ServiceInvoiceImporter.API/appsettings.Development.json
+++ b/src/ServiceInvoiceImporter.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost,1433;Database=InvoiceProcessor;User Id=sa;Password=Melon@123;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
